# zohran-ghs-dashboard

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
apps/: streamlit_app.py
docs/: Andre Processing Notes.md  plan.md
docs/brainstorms/: 2026-06-06-pipeline-parity-and-automation-requirements.md
docs/plans/: 2026-06-06-001-feat-pipeline-parity-dq-automation-plan.md
input_data/: Current_Building_Accessibility_Profile_List.xlsm
notebooks/: 01_process_dacs.ipynb  02_process_school_locations.ipynb  03_process_cast_vote_record.ipynb  04_process_school_accessibility.ipynb  04_solar_readiness_assessment.ipynb  05_process_ll84.ipynb  05_schools_with_lead_in_paint.ipynb  accessibility.csv  capacity_utilization.ipynb  city_council_districts.ipynb  extract_ll24_fy2024_pdf.py  ghs_analysis.ipynb  hurricaneEvac_HeatIndex_distEvacCenters_distCoolingCenters.py  join_to_schools.ipynb  process_air_pollution_and_join.py  process_bap.ipynb  process_ghs_survey_data.ipynb  process_school_accessibility.ipynb  process_ventilation.ipynb  schools_lead_paint.ipynb  storm_water_ranked_join.py  visualize_all_layers.ipynb
notebooks/andre_working/: convert_continous_to_percentile_class.py  dist_to_subway_processing.py  download_geojson_from_arc_server.py  hurricaneEvac_HeatIndex_distEvacCenters_distCoolingCenters.py  (+3 more)
pipelines/: join_to_schools.py
processed_data/: dac_nyc_lite.geojson  school_points_with_lcgms.geojson  schools_with_accessibility_status.csv
tests/: test_pipeline_dq.py  test_snap_points.py
(+4 files in other folders)
