[project]
name = "zohran-ghs-dashboard"
version = "0.1.0"
description = "A map-based dashboard using GeoPandas, Plotly, and Dash"
authors = []
dependencies = [
    "pre-commit>=3.5.0",
    "pytest>=7.4.0",
    "dash>=2.14.2",
    "plotly>=5.18.0",
    "geopandas>=0.14.3",
    "pyproj>=3.0.0",
    "pandas>=2.1.4",
    "dash-bootstrap-components>=1.5.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.9"

[tool.project.external-dependencies]
system = [
    "PROJ library (brew install proj on macOS)",
    "GDAL library (optional, for advanced GIS operations)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zohran_ghs_dashboard"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
